[package]
name = "hello-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
dotenvy = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.2", features = ["trace", "add-extension"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
